--- a/WEB_NETCORE_SACHS/Views/ChiTietDonHangs/Details.cshtml
+++ b/WEB_NETCORE_SACHS/Views/ChiTietDonHangs/Details.cshtml
@@ -24,10 +24,10 @@
             @Html.DisplayFor(model => model.DonGia)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.MaSachs)
+            @Html.DisplayNameFor(model => model.Sach)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.MaSachs.MaSach)
+            @Html.DisplayFor(model => model.Sach.MaSach)
         </dd>
     </dl>
 </div>
