--- a/WEB_NETCORE_SACHS/Views/ChiTietDonHangs/Index.cshtml
+++ b/WEB_NETCORE_SACHS/Views/ChiTietDonHangs/Index.cshtml
@@ -20,7 +20,7 @@
                 @Html.DisplayNameFor(model => model.DonGia)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.MaSachs)
+                @Html.DisplayNameFor(model => model.Sach)
             </th>
             <th></th>
         </tr>
@@ -35,7 +35,7 @@
                 @Html.DisplayFor(modelItem => item.DonGia)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.MaSachs.MaSach)
+                @Html.DisplayFor(modelItem => item.Sach.MaSach)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
