--- a/WEB_NETCORE_SACHS/Views/Shared/_Layout.cshtml
+++ b/WEB_NETCORE_SACHS/Views/Shared/_Layout.cshtml
@@ -94,7 +94,7 @@
 		</div>
 
 		<div class="column middle">
-			<div style="width:100%;height:17%">
+			<div style="width:100%;height:25%">
 				<div style="width:70%;height:100%;float:left;border:1px solid red">
 					@*//@Html.Action("Slideshow", "Saches")*@
 				</div>
@@ -102,15 +102,13 @@
 					@*@Html.Action("Sach_Moi_PartialView", "Saches")*@
 				</div>
 			</div>
-			<div>
+			<div style="width:auto">
 				@RenderBody()
 			</div>
 		</div>
 
 		<div class="column side">
-			<div>
-				@*@Html.Action("GioHang_Partial", "GioHang")*@
-			</div>
+			
 			<div>@await Html.PartialAsync("_chude", chude)</div>
 		</div>
 	
