--- a/WEB_NETCORE_SACHS/wwwroot/css/css/PagedList.css
+++ b/WEB_NETCORE_SACHS/wwwroot/css/css/PagedList.css
@@ -1,67 +1,22 @@
 .pagination {
-  display: inline-block;
-  margin-left:30%;
-  margin-right:30%;
-  margin-top:0px;
-  border-radius: 4px 4px 4px 4px;
- 
-
+	display: inline-block;
 }
 
-.pagination > li {
-  display: inline;
-}
+	.pagination a {
+		color: black;
+		float: left;
+		padding: 8px 16px;
+		text-decoration: none;
+		transition: background-color .3s;
+		border: 1px solid #ddd;
+	}
 
-.pagination > li > a,
-.pagination > li > span {
-  
-  float: left;
-  padding: 6px 12px;
-  
-  line-height: 1.428571429;
-  text-decoration: none;
-  background-color: #ffffff;
-  border: 1px solid #dddddd;
-}
+		.pagination a.active {
+			background-color: #4CAF50;
+			color: white;
+			border: 1px solid #4CAF50;
+		}
 
-.pagination > li:first-child > a,
-.pagination > li:first-child > span {
-  margin-left: 0;
-  border-bottom-left-radius: 4px;
-  border-top-left-radius: 4px;
-}
-
-.pagination > li:last-child > a,
-.pagination > li:last-child > span {
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
-}
-
-.pagination > li > a:hover,
-.pagination > li > span:hover,
-.pagination > li > a:focus,
-.pagination > li > span:focus {
-  background-color: #eeeeee;
-}
-
-.pagination > .active > a,
-.pagination > .active > span,
-.pagination > .active > a:hover,
-.pagination > .active > span:hover,
-.pagination > .active > a:focus,
-.pagination > .active > span:focus {
-  z-index: 2;
-  color: #ffffff;
-  cursor: default;
-  background-color: #428bca;
-  border-color: #428bca;
-}
-
-.pagination > .disabled > span,
-.pagination > .disabled > a,
-.pagination > .disabled > a:hover,
-.pagination > .disabled > a:focus {
-  color: #999999;
-  cursor: not-allowed;
-}
-
+		.pagination a:hover:not(.active) {
+			background-color: #ddd;
+		}
